--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -46,7 +46,7 @@
                     FontAttributes="Bold"
                     FontSize="35"
                     HorizontalTextAlignment="Center"
-                    Text="$0.00"
+                    Text="0.00 €"
                     TextColor="{StaticResource LightFont}"
                     VerticalOptions="CenterAndExpand" />
 
@@ -66,7 +66,7 @@
                     <Label
                         x:Name="lblSubtotal"
                         FontAttributes="Bold"
-                        Text="$0.00"
+                        Text="0.00 €"
                         TextColor="{StaticResource LightFont}" />
                     <Label
                         Margin="0,10,0,0"
@@ -75,7 +75,7 @@
                     <Label
                         x:Name="lblTipByPerson"
                         FontAttributes="Bold"
-                        Text="$0.00"
+                        Text="0.00 €"
                         TextColor="{StaticResource LightFont}" />
                 </VerticalStackLayout>
             </Grid>
@@ -94,7 +94,7 @@
             </Grid.RowDefinitions>
 
             <Label
-                Text="Enter your bill: $"
+                Text="Enter your bill: €"
                 TextColor="{StaticResource LightFont}"
                 VerticalOptions="Center" />
 
@@ -102,8 +102,8 @@
                 x:Name="txtBill"
                 Grid.Column="1"
                 BackgroundColor="{StaticResource SectionsColor}"
+                Completed="txtBill_Completed"
                 Keyboard="Numeric"
-                Text="0.0"
                 TextColor="{StaticResource LightFont}"
                 VerticalOptions="Center" />
 
@@ -119,9 +119,18 @@
                 HeightRequest="70"
                 HorizontalOptions="CenterAndExpand"
                 Spacing="10">
-                <Button Text="10%" WidthRequest="70" />
-                <Button Text="15%" WidthRequest="70" />
-                <Button Text="20%" WidthRequest="70" />
+                <Button
+                    Clicked="Button_Clicked"
+                    Text="10%"
+                    WidthRequest="70" />
+                <Button
+                    Clicked="Button_Clicked"
+                    Text="15%"
+                    WidthRequest="70" />
+                <Button
+                    Clicked="Button_Clicked"
+                    Text="20%"
+                    WidthRequest="70" />
             </HorizontalStackLayout>
 
             <Label
@@ -135,7 +144,8 @@
                 Grid.Row="2"
                 Grid.Column="1"
                 Maximum="50"
-                Minimum="0" />
+                Minimum="0"
+                ValueChanged="sldTip_ValueChanged" />
 
             <Label
                 Grid.Row="3"
@@ -150,6 +160,7 @@
                 VerticalOptions="Center">
                 <Button
                     x:Name="btnMinus"
+                    Clicked="btnMinus_Clicked"
                     Text="-"
                     WidthRequest="70" />
                 <Label
@@ -168,6 +179,7 @@
                     ZIndex="1" />
                 <Button
                     x:Name="btnPlus"
+                    Clicked="btnPlus_Clicked"
                     Text="+"
                     WidthRequest="70" />
             </HorizontalStackLayout>
